--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -22,16 +22,34 @@
     <h2>快速注册<span>通过邮箱注册，快速加入积粒网，轻轻松松拿米粒、换现金！</span></h2>
     <ul class="form"> 
     <form action="{{ path('_user_reg') }}" method="post" name="form1" id="form1" >
-    	<li><dd>邮件地址：</dd><dt><input name="email" type="text" id="email" onblur="return check();"><br />
-    	    <span id="emailError">电子邮件就是您今后登录积粒网的账号</span>
+    	<li><dd>邮件地址：</dd><dt><input name="email" type="text" id="email"><br />
+    	    <span id="emailError">
+    	    {% if code_email==0%}电子邮件就是您今后登录积粒网的账号
+    	    {% elseif code_email==1 %}<font color='red'>请输入邮箱</font>
+    	    {% elseif code_email==2 %}<font color='red'>邮箱格式不对</font>
+    	    {% else %}<font color='red'>邮箱已经注册</font>
+    	    {% endif %}
+    	    </span>
     	</dt></li>
-        <li><dd>昵称：</dd><dt><input name="nick" type="text" id="nick" onblur="return check();"><br /><span id="nickError">2-20个字符</span></dt></li>
-        <li><dd>验证码：</dd><dt><input id="captcha" name="captcha" type="text" class="verification" onblur="return check();"></dt>
+        <li><dd>昵称：</dd><dt><input name="nick" type="text" id="nick"><br />
+        <span id="nickError">
+        {% if code_nick==0%}2-20个字符
+    	    {% elseif code_nick==1 %}<font color='red'>请输入昵称</font>
+    	    {% elseif code_nick==2 %}<font color='red'>昵称已经注册</font>
+    	    {% elseif code_nick==3 %}<font color='red'>昵称为2-20个字符</font>
+    	    {% endif %}
+        </span>
+        </dt></li>
+        <li><dd>验证码：</dd><dt><input id="captcha" name="captcha" type="text" class="verification"></dt>
         <img name="captcha" onclick="this.src='{{  path('_user_captcha',{'r': random(999999) } )}}'" src="{{ path('_user_captcha') }}" />
-        <br /><dd>&nbsp;</dd><dt></dt><span id="captchaError"></span>
+        <br /><dd>&nbsp;</dd><dt></dt>
+        <span id="captchaError">
+    	    {% if code_cha==1 %}<font color='red'>验证码不对</font>
+    	    {% endif %} 
+        </span>
          </li>
         <li><dd></dd><dt><!--  <a class="regBtn" href="#">发送验证邮件</a>-->
-        <input type='button' class='regBtn' value='发送验证邮件' onclick='return check();'/>
+        <input type='button' id='reg' class='regBtn' value='发送验证邮件'/>
         </dt></li></form>
     </ul>
     <div class="loginArea">我已经注册，现在就<a class="login" href="{{ path('_user_login') }}">登录</a></div>
@@ -42,78 +60,11 @@
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 <script type="text/javascript">
-   function check(){
-      var filter  = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
-      if($("#email").val()==''){
-          $("#emailError").html('<font color="red">email不为空</font>');
-          $("#email").focus();
-          return false;
-      }else{
-    	  if (!filter.test($("#email").val())){
-        	  $("#emailError").html('<font color="red">请填写正确的email</font>');
-        	  $("#email").focus();
-              return false;
-          }else{
-        	  $.ajax({
-            		url: "{{ path('_user_checkEmail') }}?email="+$("#email").val(),
-            		post: "GET",
-            		success:function(data){
-            		    if(data==0){
-            		    	$("#emailError").html('<font color="red">邮箱已被注册</font>');
-            		        $("#emailError").focus();
-            		        return false;
-                		}else{
-                		  $("#emailError").html('电子邮件就是您今后登录积粒网的账号');
-                		  var nick_filter = /^([\u4E00-\uFA29]|[\uE7C7-\uE7F3]|[\w]){2,20}$/;
-                      	  if($("#nick").val()==''){
-                          	  $("#nickError").html('<font color="red">昵称不为空</font>');
-                                $("#nick").focus();
-                                return false;
-                            }else{
-                          	  if (!nick_filter.test($("#nick").val())){
-                              	  $("#nickError").html('<font color="red">昵称只能是2-20位中英文下划线</font>');
-                              	  $("#nick").focus();
-                                    return false;
-                                }else{
-                                	$.ajax({
-                                		url: "{{ path('_user_checkNick') }}?nick="+$("#nick").val(),
-                                		post: "GET",
-                                		success:function(data){
-                                			if(data==0){
-                                		    	$("#nickError").html('<font color="red">昵称已被注册</font>');
-                                		        $("#nickError").focus();
-                                		        return false;
-                                    		}else{
-                                       			 $("#nickError").html('2-20个字符');
-                                            	  $.ajax({
-                                                		url: "{{ path('_user_checkCaptcha') }}?captcha="+$("#captcha").val(),
-                                                		post: "GET",
-                                                		success:function(data){
-                                                		    if(data==1){
-                                                		    	$("#captchaError").html('<font color="red">验证码不正确</font>');
-                                                		        $("#captchaError").focus();
-                                                		        return false;
-                                                    		}else{
-                                                    			$("#captchaError").html('');
-                                                        		document.form1.submit();
-                                                        	}
-                                                		}
-                                                	});
-                                        		
-                                    		}
-                                		}
-                                   });
-                              	 
-                                }
-                                    
-                            }
-                    		
-                    	}
-            		}
-            	});
-          }
-      }
-   }
+$(document).ready(function(){
+	$("#reg").click(function(){
+		$("#form1").submit();
+	});
+});
 
 </script>
 </html>
