--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-公告</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -16,24 +16,12 @@
 <div class="webArticle newsMore">
   <article>
     <h1>{{ callboard.title }}</h1>
-    <div class="artInfo">[<time>{{ callboard.startTime.date }}</time>发表&nbsp;&nbsp;作者：<span class="media_name">91积粒网</span>]</div>
+    <div class="artInfo"><time>{{ callboard.startTime.date | date("Y-m-d")  }}</time>&nbsp;&nbsp;作者：<span class="media_name">{{ callboard.author  }}</span></div>
     <div class="content">
-    {{ callboard.content }}
+    {{ callboard.content | raw }}
     </div>
   </article>
   <aside>
-    <section>
-      <h4> 帮助中心<a class="more" href="#">更多>></a> </h4>
-      <ul class="help">
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li><a href="#">在沙沙网络可以做什么？</a></li>
-        <li class="last"><a href="#">在沙沙网络可以做什么？</a></li>
-      </ul>
-    </section>
   </aside>
 </div>
 
