--- a/src/Jili/ApiBundle/Resources/views/User/agreement.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/agreement.html.twig
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-会员服务协议</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/agreement.css')}}" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
