--- a/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/checkReg.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-邮箱验证</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -22,9 +22,9 @@
    	    <div class="img"><img src="{{ asset('images/emailImage.jpg')}}" width="123" height="115"></div>
         <p>我们已经发送了激活右键给您<br />请查看您的邮箱，确认是否收到来自积粒网的激活邮件，并点击邮件中的验证链接。<br />
         {% if gotoEmial %}
-         <a href="http://{{ gotoEmial }}" target="blank">
+         <a href="http://{{ gotoEmial }}" target="_blank">
         {% else %}
-        <a href="{{ path('_default_error') }}" target="blank">
+        <a href="{{ path('_default_error') }}" target="_blank">
         {% endif %}
        <img src="{{ asset('images/goMailBtn.jpg')}}" width="128" height="35"></a></p>
         <p><a class="again" href="#">没收到？再次发送！</a></p>
