--- a/src/Jili/ApiBundle/Resources/views/User/forgetPass.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/forgetPass.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-账户设定</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -49,7 +49,7 @@ $(document).ready(function(){
     	 {% else %}<font color="red"> 2次密码不相同</font>
     	 {%  endif %}
         </span></dt></li>
-        <li><dd></dd><dt><input name="ck" type="checkbox" value="1" id="ck">我已认真阅读并同意接受<a href="{{ path('_user_agreement') }}" target="blank" class="provision">《积粒网会员协议》</a></dt></li>
+        <li><dd></dd><dt><input name="ck" type="checkbox" value="1" id="ck">我已认真阅读并同意接受<a href="{{ path('_user_agreement') }}" target="_blank" class="provision">《积粒网会员协议》</a></dt></li>
         <li><dd></dd><dt><input type='button' name='but' id='but' value='创建账号'/></dt></li>
     </ul>
     </form>
