--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-个人中心</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -12,7 +12,12 @@
 <script src="{{ asset('js/personal.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-	$("#update").hide();
+	{% if codeflag == 0 %}
+      $("#update").hide();
+      {% else %}
+      $("#info").hide();
+      $("#update").show();
+      {%  endif %}
 	/*
 		$.ajax({
 			url : '{{ path('_user_checkFlag',{'id':user.id}) }}',
@@ -51,7 +56,7 @@ $(document).ready(function(){
     	    {% endif %}
         </div>
         <form action="{{ path('_user_info') }}" method="post" {{ form_enctype(form) }} id="form1">
-        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span></p>
+        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ path('_user_changePwd') }}">修改密码</a></p>
         <p>{{ form_widget(form.attachment) }}<a class="upload">上传头像</a></p>
         <!-- <a class="upload" href="">上传头像</a> -->
         <p> {% if code %}
@@ -78,7 +83,7 @@ $(document).ready(function(){
         </li>
         <li>
           <dd>性  别：</dd>
-          <dt>{% if user.sex==0 %} 
+          <dt>{% if user.sex==1 %} 
          男{% else %}女{% endif %}</dt>
         </li>
        
@@ -93,11 +98,54 @@ $(document).ready(function(){
   </section>
   
   <section id= "update">
-  {% include 'JiliApiBundle:User:update.html.twig' %}
+   <form action="{{ path('_user_info') }}" method="post">
+    <h3>个人信息<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
+    <div class="content info">
+      <a class="edit"href="javascript:void(0);" id="change">修改 »</a>
+      <ul>
+        <li>
+          <dd>登录账号：</dd>
+          <dt>{{ user.email }}  </dt>
+        </li>
+        <li>
+          <dd>昵  称：</dd>
+          <dt>
+             {{ user.nick }}
+          </dt>
+        </li>
+        <li>
+          <dd>性  别：</dd>
+          <dt>
+            <input name="sex" type="radio" {% if user.sex==1 %} checked='checked' {% endif %} value="1">
+            男
+            <input name="sex" type="radio" {% if user.sex==2 %} checked='checked' {% endif %} value="2">
+            女</dt>
+        </li>
+        <li>
+          <dd>手机号码：</dd>
+          <dt>
+            <input name="tel" type="text" value="{{ user.tel }}"><br/>
+              {% if codeflag == 1 %}
+            <font color='red'>请选择性别</font>
+       {% elseif codeflag ==2  %}
+           <font color='red'>手机格式不对</font>
+       {% else %}
+         
+       {% endif %}
+          </dt>
+        </li>
+        <li><dd>&nbsp;</dd>
+          <dt>
+            <input name="update" type="submit" value="保存">
+          </dt>
+        </li>
+      </ul>
+    </div>
+</form>
   </section>
 
   <section>
-    <h3>我的广告体验<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
+    <h3>我的任务历史<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content ad">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
@@ -110,11 +158,26 @@ $(document).ready(function(){
         {% if adtasteNum > 0 %}
          {% for item in adtaste %}
         <tr>
-           <td>{{ item.categoryName }}</td>
-           <td>{{ item.title }} </td>
-          <td>长期</td>
-          <td>{{ item.createTime.date  }}</td>
-           <td>领取奖励</td>
+          <td>
+         {% if item.incentiveType==1 %}
+         cpa
+         {% else %}
+         cps
+         {% endif %}
+          </td>
+          <td>{{ item.title }} </td>
+          <td>{% if item.incentiveType==1 %}
+                 {{ item.incentive }}米粒
+                 {% else %}
+                 最高获消费额{{ item.incentiveRate }}%的米粒
+                 {% endif %}</td>
+          <td>{{ item.createTime.date }}</td>
+          <td>{% if item.orderStatus==1  %} 已领取
+             {% elseif item.orderStatus==2  %} 确认中
+              {% elseif item.orderStatus==3  %} 已完成
+          {% elseif item.orderStatus==3  %} 任务失败
+          {% else %}{% endif %}
+          </td>
         </tr>
          {% endfor %}
          <center><p><a href="{{ path('_user_adtaste',{'type': 1}) }}">更多</a></p></center>
