--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-会员登录</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
