--- a/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-重置密码</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -12,34 +12,13 @@
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
 <script type="text/javascript">
-$(function(){
-	$("#spans").hide();
-	$("#sames").hide();
+$(document).ready(function(){
+	{% if codeflag==1 %}
+	$(".activate").hide();
+	{% endif %}
 });
 function check(){
-	var pwd_filter = /^[0-9A-Za-z_]{6,20}$/;
-	if(!pwd_filter.test($("#pwd").val())){
-	    $("#pwdError").addClass('error');
-	    $("#spans").show();
-	    $("#pwdError").focus();
-	    return false;
-	}else{
-		$("#pwdError").removeClass('error');
-    	$("#pwdError").addClass('succeed');
-    	$("#spans").hide();
-    	if( $("#pwd").val() !=  $("#newPwd").val()){
-    		$("#newPwdError").addClass('error');
-    		$("#sames").show();
-    		$("#newPwdError").focus();
-    		return false;
-    	}else{
-    	    $("#form1").submit();
-    		//$(".message").show();
-    		//$("#pwd").val('');
-    		//$("#newPwd").val('');
-    	}
-		
-	}
+	$("#form1").submit();
 }
 
 </script>
@@ -56,21 +35,37 @@ function check(){
       <ul class="activate">
         <li>
           <dd>请输入新密码：</dd>
-          <dt id="pwdError">
-            <input name="pwd" id="pwd" type="password" onblur='return check();'><font>&nbsp;</font>
+          {%  if codeflag==2 %}
+          <dt id="pwdError" class="error">
+            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font>
             <br />
-            <span id="spans">2-12个字符，不能含特殊符号</span></dt>
+            <span>请输入密码</span></dt>
+            {% elseif codeflag==3 %}
+            <dt id="pwdError" class="error">
+            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font>
+            <br />
+            <span>密码为6-20个字符，不能含特殊符号</span></dt>
+            {% else %}
+            <dt id="pwdError">
+            <input name="pwd" id="pwd" type="password"><font>&nbsp;</font></dt>
+            {% endif %}
         </li>
         <li>
           <dd>请再次输入新密码：</dd>
-          <dt id="newPwdError">
-            <input name="newPwd" id="newPwd"  type="password" onblur='return check();'><font>&nbsp;</font>
+           {%  if codeflag==4 %}
+          <dt id="newPwdError" class="error">
+            <input name="newPwd" id="newPwd"  type="password"><font>&nbsp;</font>
              <br />
-            <span id="sames">2次密码不相同</span></dt>
+            <span>2次密码不相同</span></dt>
+            {% else %}
+              <dt id="newPwdError">
+            <input name="newPwd" id="newPwd"  type="password"><font>&nbsp;</font>
+            </dt>
+             {% endif %}
         </li>
         <li>
           <dd></dd>
-          <dt><a class="saveBtn" href="javascript:void(0);" onclick='return check();'>保存设置</a></dt>
+          <dt><a class="saveBtn" href="javascript:void(0);" onclick="check();">保存设置</a></dt>
         </li>
       </ul>
       <div class="clear"></div>
