--- a/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title></title>
+<title>积粒网-重置密码</title>
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
@@ -42,6 +42,7 @@ function check(){
 				$("#sendEmail").attr("onclick",""); 
 			}else{
 				alert('邮件未注册');
+				$("#email").val('');
 			}
 		}
 	});
