--- a/src/Jili/ApiBundle/Resources/views/footer.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/footer.html.twig
@@ -1,5 +1,15 @@
 <footer>
-	<section><p><a href="#">关于积粒网</a>|<a href="#">服务条款</a>|<a href="#">广告服务</a>|<span><a href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
+	<section><p><a href="{{ path('_default_about') }}" target="_blank">关于积粒网</a>|<a href="{{ path('_user_agreement') }}" target="_blank">服务条款</a>|<a href="#">广告服务</a>|<span><a href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
     <p>关注我们：<a class="sina" href="#">新浪微博</a><a class="tencent" href="#">腾讯微博</a><a class="weixin" href="#">微信</a></p>
 	</section>
 </footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41491522-1', '91jili.com');
+  ga('send', 'pageview');
+
+</script>
