--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -1,6 +1,7 @@
+<script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script>
 <header>
   <section>
-    <div id="logo"><a href="{{ path('_default_index') }}"><img src="{{ asset('images/logo.gif')}}" width="109" height="37"></a></div>
+    <div id="logo"><a href="{{ path('_default_index') }}"><img src="{{ asset('images/logo.gif')}}"></a></div>
     <nav id="menu">
       <ul>
         <li><a href="{{ path('_default_index') }}">首页</a></li>
