--- a/web/css/agreement.css
+++ b/web/css/agreement.css
@@ -1,7 +1,7 @@
 .agreement {
 	margin: auto;
 	width: 960px;
-	padding: 45px 0;
+	padding: 45px 0 140px 0;
 	font-size: 14px;
 }
 .agreement section {
