--- a/web/css/newsList.css
+++ b/web/css/newsList.css
@@ -33,6 +33,9 @@
 	float:left;
 	padding-left:5px;
 }
+.newsList article ul.news li .title span{
+	color:#EC4920;
+}
 .newsList article ul.news li .artInfo{
 	float:right;
 	color:#999999;
