--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -12,22 +12,14 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
-function keyLogin(event){  
-    if (event.keyCode==13)   //回车键的键值为13  
-         //document.form1.submit(); //调用登录按钮的登录事件  
-        check();
-}  
-function check(){
-     $("#form1").submit();
-}
+
 function clear(){
 	$(".error").html('&nbsp;');
 }
-
     
 </script>
 </head>
-<body onkeydown="keyLogin(event);">
+<body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle login">
   <div class="img"><img src="{{ asset('images/loginImage.jpg') }}" width="436" height="423"></div>
@@ -53,7 +45,7 @@ function clear(){
       <li>
       <input id="remember_me" name="remember_me" type="checkbox" value="1">记住我
       </li>
-      <li class="loginBtn"><input name="" type="button" value="登录" onclick="check();"><a class="forget" href="{{ path('_user_resetPwd') }}" target="_blank">忘记密码</a></li>
+      <li class="loginBtn"><input name="" type="submit" value="登录"><a class="forget" href="{{ path('_user_resetPwd') }}" target="_blank">忘记密码</a></li>
       <!--  <li class="otherLogin">使用合作网站登录<a class="weibo" href="#"></a><a class="qq" href="#"></a></li>-->
     </ul>
     <div class="regArea"><a href="{{ path('_user_reg') }}" target="_blank" class="reg">立即注册</a></div>
