--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>积粒网-公告</title>
 <!-- [if lt IE9] -->
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
