--- a/src/Jili/ApiBundle/Resources/views/User/agreement.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/agreement.html.twig
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>积粒网-会员服务协议</title>
 <!-- [if lt IE9] -->
+<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/bottom.js')}}" type="text/javascript"></script>
 <!-- [endif] -->
