--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -15,9 +15,10 @@
 $(document).ready(function() {
 	var url = window.location.href;
     url = url.split("adtaste/");
+    url = url[1].substring(0,1);
     $("div article .screen a").removeClass("hover"); 
-    if(url[1]){
-    	switch(url[1]){
+    if(url){
+    	switch(url){
         case "0":
             $("div article .screen a:last").addClass("hover"); 
             break;
@@ -30,7 +31,7 @@ $(document).ready(function() {
         case "3":
             $("div article .screen a:eq(2)").addClass("hover"); 
             break;
-        default:
+       default:
         	location.href="{{ path('_user_adtaste',{'type': 0}) }}";
             break;
         }
@@ -105,8 +106,9 @@ function addClass(type){
         </tr>
          {% endfor %}
          {%  endif %}
-         {{ knp_pagination_render(pagination) }}
+         
     </table>
+    {{ knp_pagination_render(pagination) }}
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
