--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -15,9 +15,10 @@
 $(document).ready(function() {
 	var url = window.location.href;
     url = url.split("exchange/");
+    url = url[1].substring(0,1);
     $("div article .screen a").removeClass("hover"); 
-    if(url[1]){
-    	switch(url[1]){
+    if(url){
+    	switch(url){
         case "0":
             $("div article .screen a:last").addClass("hover"); 
             break;
@@ -90,9 +91,9 @@ function addClass(type){
         </tr>
         {% endfor %}
          {%  endif %}
-         {{ knp_pagination_render(pagination) }}
        
     </table>
+    {{ knp_pagination_render(pagination) }}
    
   </article>
 </div>
