--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -78,7 +78,7 @@ function addClass(type){
             <th>任务名称</th>
             <th>奖励米粒</th>
             <th>任务领取时间</th>
-            <th>状态</th>
+            <th>任务状态</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
