--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -153,7 +153,7 @@ $(document).ready(function(){
           <th>任务名称</th>
           <th>奖励积分</th>
           <th>任务领取时间</th>
-          <th>状态</th>
+          <th>任务状态</th>
         </tr>
         {% if adtasteNum > 0 %}
          {% for item in adtaste %}
